--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-webpack-babel",
-  "version": "0.0.3",
+  "name": "ReactWeatherApp",
+  "version": "0.0.1",
   "description": "React Webpack Babel Starter Kit",
   "main": "''",
   "scripts": {
@@ -10,16 +10,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/alicoding/react-webpack-babel"
+    "url": "https://github.com/arslantariq115/ReactWeatherApp"
   },
-  "author": "Ali Al Dallal",
+  "author": "Arslan Tariq",
   "license": "MIT",
-  "homepage": "https://github.com/alicoding/react-webpack-babel#readme",
+  "homepage": "https://github.com/arslantariq115/ReactWeatherApp#readme",
   "dependencies": {
     "node-sass": "^3.13.0",
     "react": "15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "15.4.1",
-    "sass-loader": "^4.0.2"
+    "sass-loader": "^4.0.2",
+    "weather-icons": "^1.3.2"
   },
   "devDependencies": {
     "babel-core": "6.18.2",
