--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "15.4.1",
+    "react-geosuggest": "^2.1.0",
     "react-notification-system": "^0.2.11",
     "sass-loader": "^4.0.2",
     "weather-icons": "^1.3.2"
