--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "15.4.1",
     "react-geosuggest": "^2.1.0",
+    "react-loading-overlay": "^0.2.4",
     "react-notification-system": "^0.2.11",
     "sass-loader": "^4.0.2",
     "weather-icons": "^1.3.2"
