--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react-geosuggest": "^2.1.0",
     "react-loading-overlay": "^0.2.4",
     "react-notification-system": "^0.2.11",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^4.0.2",
     "weather-icons": "^1.3.2"
   },
